--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -48,7 +48,7 @@ jobs:
           - frontend-cache-{{ checksum "frontend/package.json" }}
       - run:
           name: Set npm cache
-          command: "npm config set cache /mnt/ramdisk/.npm"
+          command: "npm config set cache /mnt/ramdisk/frontend/.npm"
       - run:
           name: Install Docker Buildx
           command: |
@@ -65,7 +65,7 @@ jobs:
       - save_cache:
           key: frontend-cache-{{ checksum "frontend/package.json" }}-{{ checksum "frontend/package-lock.json" }}
           paths:
-            - /mnt/ramdisk/.npm
+            - /mnt/ramdisk/frontend/.npm
             - /mnt/ramdisk/frontend/.next/cache
       - when:
           condition:
@@ -217,7 +217,7 @@ jobs:
           - backend-cache-{{ checksum "backend/package-lock.json" }}
       - run:
           name: Set npm cache
-          command: "npm config set cache /mnt/ramdisk/.npm"
+          command: "npm config set cache /mnt/ramdisk/backend/.npm"
       - run:
           name: Install Docker Buildx
           command: |
@@ -234,7 +234,7 @@ jobs:
       - save_cache:
           key: backend-cache-{{ checksum "backend/package-lock.json" }}-{{ checksum "backend/prisma/schema.prisma" }}-{{ checksum "backend/patches.hash" }}
           paths:
-            - /mnt/ramdisk/.npm
+            - /mnt/ramdisk/backend/.npm
       - when:
           condition:
             or:
