--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -47,6 +47,10 @@ jobs:
           - frontend-cache-{{ checksum "frontend/package.json" }}-{{ checksum "frontend/package-lock.json" }}
           - frontend-cache-{{ checksum "frontend/package.json" }}
       - run:
+          name: Move cache to correct location
+          command: |
+            [ -d /mnt/ramdisk/.npm ] && mv /mnt/ramdisk/.npm /mnt/ramdisk/frontend/.npm
+      - run:
           name: Set npm cache
           command: "npm config set cache /mnt/ramdisk/frontend/.npm"
       - run:
@@ -215,6 +219,10 @@ jobs:
           - backend-cache-{{ checksum "backend/package-lock.json" }}-{{ checksum "backend/prisma/schema.prisma" }}-{{ checksum "backend/patches.hash" }}
           - backend-cache-{{ checksum "backend/package-lock.json" }}-{{ checksum "backend/prisma/schema.prisma" }}
           - backend-cache-{{ checksum "backend/package-lock.json" }}
+      - run:
+          name: Move cache to correct location
+          command: |
+            [ -d /mnt/ramdisk/.npm ] && mv /mnt/ramdisk/.npm /mnt/ramdisk/backend/.npm
       - run:
           name: Set npm cache
           command: "npm config set cache /mnt/ramdisk/backend/.npm"
