--- a/frontend/package.json
+++ b/frontend/package.json
@@ -52,7 +52,7 @@
     "graphql-ws": "^5.13.1",
     "immer": "^10.0.2",
     "isomorphic-unfetch": "^4.0.2",
-    "lodash": "^4.17.21",
+    "just-memoize": "^2.2.0",
     "luxon": "^3.3.0",
     "material-react-table": "^1.13.0",
     "material-ui-confirm": "^3.0.9",
@@ -67,6 +67,7 @@
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.44.3",
+    "remeda": "^1.19.0",
     "sharp": "^0.32.1",
     "styled-jsx": "^5.1.2",
     "tmc-client-js": "^0.0.11",
@@ -93,7 +94,6 @@
     "@svgr/webpack": "^8.0.1",
     "@types/babel__core": "^7.20.1",
     "@types/css-mediaquery": "^0.1.1",
-    "@types/lodash": "^4.14.195",
     "@types/luxon": "^3.3.0",
     "@types/mdx": "^2.0.5",
     "@types/mdx-js__react": "^1.5.5",
