--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -46,10 +46,10 @@ jobs:
           keys:
           - frontend-cache-{{ checksum "frontend/package.json" }}-{{ checksum "frontend/package-lock.json" }}
           - frontend-cache-{{ checksum "frontend/package.json" }}
-      - run:
-          name: Move cache to correct location
-          command: |
-            [ -d /mnt/ramdisk/.npm ] && mv /mnt/ramdisk/.npm /mnt/ramdisk/frontend/.npm
+      #- run:
+      #    name: Move cache to correct location
+      #    command: |
+      #      [ -d /mnt/ramdisk/.npm ] && mv /mnt/ramdisk/.npm /mnt/ramdisk/frontend/.npm
       - run:
           name: Set npm cache
           command: "npm config set cache /mnt/ramdisk/frontend/.npm"
@@ -219,10 +219,10 @@ jobs:
           - backend-cache-{{ checksum "backend/package-lock.json" }}-{{ checksum "backend/prisma/schema.prisma" }}-{{ checksum "backend/patches.hash" }}
           - backend-cache-{{ checksum "backend/package-lock.json" }}-{{ checksum "backend/prisma/schema.prisma" }}
           - backend-cache-{{ checksum "backend/package-lock.json" }}
-      - run:
-          name: Move cache to correct location
-          command: |
-            [ -d /mnt/ramdisk/.npm ] && mv /mnt/ramdisk/.npm /mnt/ramdisk/backend/.npm
+      #- run:
+      #    name: Move cache to correct location
+      #    command: |
+      #      [ -d /mnt/ramdisk/.npm ] && mv /mnt/ramdisk/.npm /mnt/ramdisk/backend/.npm
       - run:
           name: Set npm cache
           command: "npm config set cache /mnt/ramdisk/backend/.npm"
