debug npm cache?

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -50,6 +50,8 @@ jobs:
           name: Move cache to correct location
           command: |
             mkdir -p frontend/.npm
+            ls /mnt/ramdisk -la
+            ls /mnt/ramdisk/frontend -la
             [ -d /mnt/ramdisk/.npm ] && mv /mnt/ramdisk/.npm /mnt/ramdisk/frontend/.npm
       - run:
           name: Set npm cache
@@ -224,6 +226,8 @@ jobs:
           name: Move cache to correct location
           command: |
             mkdir -p backend/.npm
+            ls /mnt/ramdisk -la
+            ls /mnt/ramdisk/backend -la
             [ -d /mnt/ramdisk/.npm ] && mv /mnt/ramdisk/.npm /mnt/ramdisk/backend/.npm
       - run:
           name: Set npm cache
