--- a/backend/tsconfig.production.json
+++ b/backend/tsconfig.production.json
@@ -23,6 +23,6 @@
     "resolveJsonModule": true,
     "sourceRoot": "/"
   },
-  "include": [".", "./types", "types.d.ts"],
+  "include": [".", "./bin/**/*"],
   "exclude": ["node_modules", "__mocks__"]
 }
