--- a/backend/tsconfig.production.json
+++ b/backend/tsconfig.production.json
@@ -24,5 +24,5 @@
     "sourceRoot": "/"
   },
   "include": [".", "./bin/**/*"],
-  "exclude": ["node_modules", "__mocks__"]
+  "exclude": ["node_modules", "__mocks__", "dist"]
 }
