remove ts-node-dev; remove duplicate buildusersearch

--- a/backend/package.json
+++ b/backend/package.json
@@ -29,6 +29,7 @@
     "kafka-consumer-exercises": "node ./dist/bin/kafkaConsumer/exerciseConsumer/kafkaConsumer.js",
     "generate": "npm run generate:prisma && npm run generate:nexus",
     "generate:prisma": "prisma generate",
+    "generate:nexus": "cross-env NEXUS_REFLECTION=true NODE_ENV=production node -r ts-node/register/transpile-only ./schema/common/createSchema.ts",
     "kafka-status": "node ./dist/bin/kafkaStatus.js",
     "seed": "node ./dist/bin/seed.js",
     "seedAll": "npm run seed && npm run seedPoints && npm run seedExercises && npm run seedCompletions",
@@ -44,9 +45,8 @@
     "expire-user-organization-join-confirmations": "node ./dist/bin/expireUserOrganizationJoinConfirmations.js",
     "prune-old-stored-data": "node ./dist/bin/pruneOldStoredData.js",
     "download-env": "node ./bin/downloadEnv.js",
-    "dev": "npm run download-env && ts-node-dev --transpile-only ./app.ts",
+    "dev": "npm run download-env && nodemon --watch ts,json --exec 'node -r ts-node/register/transpile-only ./app.ts'",
     "dev:typecheck": "tsc --noEmit --watch",
-    "generate:nexus": "cross-env NEXUS_REFLECTION=true NODE_ENV=production ts-node --transpile-only ./schema/common/createSchema.ts",
     "build": "npm run download-env && npm run createExports && tsc --noEmit false && cp -R types dist",
     "start": "node dist/app.js",
     "copy-env": "cp ./config/env.json ./dist/config/env.json",
@@ -143,10 +143,10 @@
     "locate-path": "^7.2.0",
     "nanoid": "^3.3.6",
     "nock": "^13.3.1",
+    "nodemon": "^2.0.22",
     "prettier": "^2.8.8",
     "ts-jest": "^29.1.0",
     "ts-node": "^10.9.1",
-    "ts-node-dev": "^2.0.0",
     "typescript": "^5.1.6"
   },
   "overrides": {
