--- a/backend/package.json
+++ b/backend/package.json
@@ -50,7 +50,7 @@
     "build": "npm run download-env && npm run createExports && tsc --noEmit false && cp -R types dist",
     "start": "node dist/app.js",
     "copy-env": "cp ./config/env.json ./dist/config/env.json",
-    "migrate": "knex migrate:latest",
+    "migrate": "NODE_OPTIONS=\"-r ts-node/register/transpile-only\" knex migrate:latest",
     "rollback": "knex migrate:rollback",
     "build-sourcemap": "tsc --noEmit false --sourceMap --outDir sourcemap",
     "typecheck": "tsc --noEmit"
