--- a/backend/package.json
+++ b/backend/package.json
@@ -45,7 +45,7 @@
     "expire-user-organization-join-confirmations": "node ./dist/bin/expireUserOrganizationJoinConfirmations.js",
     "prune-old-stored-data": "node ./dist/bin/pruneOldStoredData.js",
     "download-env": "node ./bin/downloadEnv.js",
-    "dev": "npm run download-env && nodemon --watch ts,json --exec 'node -r ts-node/register/transpile-only ./app.ts'",
+    "dev": "npm run download-env && nodemon --watch './**/*' --ignore 'test/**/*' --ext 'ts,json' --exec 'node -r ts-node/register/transpile-only ./app.ts'",
     "dev:typecheck": "tsc --noEmit --watch",
     "build": "npm run download-env && npm run createExports && tsc --noEmit false && cp -R types dist",
     "start": "node dist/app.js",
