Add kafka files

--- a/helm/templates/kafka/exercise-topic.yml
+++ b/helm/templates/kafka/exercise-topic.yml
@@ -1,7 +1,7 @@
 apiVersion: kafka.strimzi.io/v1beta1
 kind: KafkaTopic
 metadata:
-  name: exercises-realtime
+  name: exercise
   namespace: kafka
   labels:
     strimzi.io/cluster: kafka-cluster
