Update circleci remote docker version

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -40,7 +40,7 @@ jobs:
     steps:
       - checkout
       - setup_remote_docker:
-          version: "20.10.18"
+          version: default
           docker_layer_caching: true
       - restore_cache:
           keys:
@@ -209,7 +209,7 @@ jobs:
     steps:
       - checkout
       - setup_remote_docker:
-          version: "20.10.18"
+          version: default
           docker_layer_caching: true
       - jq/install
       - run:
