--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -329,7 +329,7 @@ jobs:
           version: v3.4.2
       - run:
           name: Install envsubst
-          command: sudo apt-get update && sudo apt-get install -qq -y gettext
+          command: sudo apt-get update --ignore-missing || true && sudo apt-get install -y gettext
       - run:
           name: "Deploy"
           command: "bin/ci-update-deployments.sh"
