--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
     "opava-stats-emailer": "node ./dist/bin/opavaStatsEmailer.js",
     "purkyne-stats-emailer": "node ./dist/bin/purkyneStatsEmailer.js",
     "masaryk-stats-emailer": "node ./dist/bin/masarykStatsEmailer.js",
+    "elements-consented-users-emailer": "node ./dist/bin/elementsConsentedUsersEmailer.js",
     "import-organizations": "node ./dist/bin/importOrganizations.js",
     "parse-file": "node ./dist/bin/parseFile.js",
     "start-kafka-consumers": "concurrently --kill-others --restart-tries 2 npm:kafka-consumer-*",
