--- a/helm/templates/elements-consented-users-mailer-cronjob.yml
+++ b/helm/templates/elements-consented-users-mailer-cronjob.yml
@@ -5,8 +5,8 @@ metadata:
   labels:
     {{- include "helm.labels" . | nindent 4 }}
 spec:
-  # Every Wednesday at 12:00pm
-  schedule: "0 12 * * 3"
+  # Every Sunday at 7:00pm UTC
+  schedule: "0 19 * * 0"
   startingDeadlineSeconds: 3600
   concurrencyPolicy: Forbid
   failedJobsHistoryLimit: 1
