--- a/helm/templates/expire-user-organization-join-confirmations-deployment.yml
+++ b/helm/templates/expire-user-organization-join-confirmations-deployment.yml
@@ -36,8 +36,18 @@ spec:
             - name: REDIS_PASSWORD
               valueFrom:
                 secretKeyRef:
-                  name: redis
+                  name: new-redis
                   key: redis-password
+            - name: REDIS_SENTINELS
+              valueFrom:
+                secretKeyRef:
+                  name: new-redis
+                  key: redis-sentinels
+            - name: REDIS_SENTINEL_MASTER_NAME
+              valueFrom:
+                secretKeyRef:
+                  name: new-redis
+                  key: redis-sentinel-master-name
           volumeMounts:
             - name: google-cloud-storage-serviceaccount
               mountPath: "/etc/gcs"
