--- a/helm/templates/kafka/kafka-bridge-deployment.yml
+++ b/helm/templates/kafka/kafka-bridge-deployment.yml
@@ -53,6 +53,16 @@ spec:
                 secretKeyRef:
                   name: new-redis
                   key: redis-password
+            - name: REDIS_SENTINELS
+              valueFrom:
+                secretKeyRef:
+                  name: new-redis
+                  key: redis-sentinels
+            - name: REDIS_SENTINEL_MASTER_NAME
+              valueFrom:
+                secretKeyRef:
+                  name: new-redis
+                  key: redis-sentinel-master-name
             - name: UV_THREADPOOL_SIZE
               value: "8"
             - name: CONNECTION_LIMIT
