--- a/helm/templates/kafka/kafka-status-deployment.yml
+++ b/helm/templates/kafka/kafka-status-deployment.yml
@@ -40,6 +40,16 @@ spec:
                 secretKeyRef:
                   name: new-redis
                   key: redis-password
+            - name: REDIS_SENTINELS
+              valueFrom:
+                secretKeyRef:
+                  name: new-redis
+                  key: redis-sentinels
+            - name: REDIS_SENTINEL_MASTER_NAME
+              valueFrom:
+                secretKeyRef:
+                  name: new-redis
+                  key: redis-sentinel-master-name
           volumeMounts:
             - name: google-cloud-storage-serviceaccount
               mountPath: "/etc/gcs"
