--- a/helm/templates/resync-user-app-datum-cronjob.yml
+++ b/helm/templates/resync-user-app-datum-cronjob.yml
@@ -33,5 +33,15 @@ spec:
                     secretKeyRef:
                       name: new-redis
                       key: redis-password
+                - name: REDIS_SENTINELS
+                  valueFrom:
+                    secretKeyRef:
+                      name: new-redis
+                      key: redis-sentinels
+                - name: REDIS_SENTINEL_MASTER_NAME
+                  valueFrom:
+                    secretKeyRef:
+                      name: new-redis
+                      key: redis-sentinel-master-name
                 - name: CONFIG_NAME
                   value: "resyncUserAppDatum"
