--- a/helm/templates/elements-consented-users-mailer-cronjob.yml
+++ b/helm/templates/elements-consented-users-mailer-cronjob.yml
@@ -7,7 +7,7 @@ metadata:
 spec:
   # Every Sunday at 7:00pm UTC
   schedule: "0 19 * * 0"
-  suspend: {{ .Values.elementsConsentedUsers.suspend | default false }}
+  suspend: {{ .Values.cronjob.elementsConsentedUsers.suspend | default false }}
   startingDeadlineSeconds: 3600
   concurrencyPolicy: Forbid
   failedJobsHistoryLimit: 1
