--- a/frontend/package.json
+++ b/frontend/package.json
@@ -39,6 +39,7 @@
     "@mui/x-date-pickers": "^6.10.0",
     "@next/env": "^13.4.17",
     "@next/mdx": "^13.4.17",
+    "@tanstack/react-query": "^5.90.16",
     "apollo-upload-client": "^17.0.0",
     "compression": "^1.7.4",
     "css-mediaquery": "^0.1.2",
