--- a/backend/package.json
+++ b/backend/package.json
@@ -115,6 +115,7 @@
     "winston": "^3.10.0",
     "winston-sentry-log": "^1.0.26",
     "ws": "^8.13.0",
+    "xlsx": "^0.18.5",
     "yup": "^1.2.0"
   },
   "devDependencies": {
