--- a/backend/package.json
+++ b/backend/package.json
@@ -72,12 +72,14 @@
     "@sentry/integrations": "^6.19.7",
     "@sentry/node": "^6.19.7",
     "@types/graphql-upload": "^8.0.12",
+    "@types/jsonwebtoken": "^9.0.10",
     "axios": "^1.4.0",
     "body-parser": "^1.20.2",
     "compression": "^1.7.4",
     "concurrently": "^8.2.0",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
+    "csv-stringify": "^6.6.0",
     "dataloader": "^2.2.3",
     "dotenv-safe": "^8.2.0",
     "express": "^4.17.1",
@@ -88,6 +90,7 @@
     "helmet": "^7.0.0",
     "json-parse-even-better-errors": "^3.0.0",
     "JSONStream": "^1.3.5",
+    "jsonwebtoken": "^9.0.3",
     "knex": "^2.5.1",
     "lodash": "^4.17.21",
     "luxon": "^3.3.0",
@@ -112,6 +115,7 @@
     "winston": "^3.10.0",
     "winston-sentry-log": "^1.0.26",
     "ws": "^8.13.0",
+    "xlsx": "^0.18.5",
     "yup": "^1.2.0"
   },
   "devDependencies": {
